fixes problem with content overflowing and breaking grid in .page-footer__nav

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -43,6 +43,9 @@
   &__nav {
     @include ul-reset;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 800px;
     padding-top: 5px;
   }
 
